--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_MAXQUERYCOUNT=12
 APP_QUERYRANDOMCOUNT=4
+APP_ALLOW_DL_HOSTING=false
 APP_MAXUPLOADSIZE=50000000
 APP_RESIZEIMAGES=false
 APP_CRONPW=password
