--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_CODENAME=dnyAcResources
 APP_VERSION="1.0"
 APP_AUTHOR="Daniel Brendel"
 APP_CONTACT="dbrendel1988(at)gmail(dot)com"
-APP_DESCRIPTION="The free database of AssaultCube resources"
+APP_DESCRIPTION="The free database of AssaultCube community resources"
 APP_TAGS="web, assaultcube, free, resources, database"
 APP_ENV=local
 APP_KEY=
