--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_VERSION="1.0"
 APP_AUTHOR="Daniel Brendel"
 APP_CONTACT="dbrendel1988(at)gmail(dot)com"
 APP_DESCRIPTION="The free database of AssaultCube community resources"
-APP_TAGS="web, assaultcube, free, resources, database"
+APP_TAGS="dnyacresources, ac-resources, web, assaultcube, free, resources, database, community"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
